# release

./: CHANGELOG.md  README.md  release.cabal  release.sh  release.yml
.github/workflows/: haskell-ci.yml  release.yml
